testCases/semanticAnalyzerTestCases/correct/nidFactorC.cs16
/*

    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

int x;
bool isWoman,isMan;


int main(bool isWoman){
    int x;

    x := - not x;
    x := not x;
    x := not (-x);
    x := not 1;
    x := not true;
    x := not false;
    x := false;
    x := true;
    x := not not not not not not not not not not not not not not not not not not not not not not not not not not not not
    not not not not not not not not not not not not not not not not not not not not not not not not not not not not not
     not not not not not not not not not not not not not not not not not not not not not not not not not not not not not
      not not not not not not not not not not not not not not not not not not not not not not not not not not not not not
       not not not not not not not not not not not not not not not not not not not not not not not not not not not not
       not not not not not not not not not not not not not not not not not not not not not not not not not not not not
       not not not not not not not not not not not not not not not not not not not not not not not not not not not not
       not not not not not not not not not not not not not not not not not not not not not not not not not not not not
       not not not not not not not not not not not not not not not not not not not not not not not not not not not not
       not not not not not not not not not not not not not not not not not not not not not not not not not not not not
       not not not not not not not not not not not not not not not not not not not not not not not not not not not not
        not not not not not not not not not not not not not not not not not not not not not not not not not not not not
         not not not not not not not not not not not not not not not not not not not not not not not not not not not not
         not not not not not not not not not not not not not not not not not not not not not not not not not not not not
          not not not not not not not not not not not not not not not not not not not not not not not not not not not
          not not not not not not not not not not not not not not not not not not not not not not not not not not not
           not not not not not not not not not not not not not not not not not not not not not not not not not not not
            not not not not not not not not not not not not not not not not not not not not not not not not not not not
            not not not not not not not not not not not not false;
   return -1;
}